--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -14,23 +14,31 @@
         <div id="content">
           <table mat-table [dataSource]="tableData" matSort>
             <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-heading"> ID </th>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header class="table-heading" role="button"
+                (click)="sorting('id')"> ID </th>
               <td mat-cell *matCellDef="let data"> {{data.id}} </td>
             </ng-container>
             <ng-container matColumnDef="fname">
-              <th mat-header-cell *matHeaderCellDef class="table-heading"> First Name </th>
+              <th mat-header-cell *matHeaderCellDef class="table-heading" mat-sort-header role="button"
+                (click)="sorting('First_name')"> First Name </th>
               <td mat-cell *matCellDef="let data"> {{data.First_name}} </td>
             </ng-container>
             <ng-container matColumnDef="lname">
               <th mat-header-cell *matHeaderCellDef class="table-heading"> Last Name </th>
-              <td mat-cell *matCellDef="let data"> {{data.Last_name}} </td>
+              <td mat-cell *matCellDef="let data" role="button" aria-disabled="sortable[2]['sortable']">
+                {{data.Last_name}} </td>
             </ng-container>
             <ng-container matColumnDef="city">
-              <th mat-header-cell *matHeaderCellDef class="table-heading"> City </th>
+              <th mat-header-cell *matHeaderCellDef class="table-heading" mat-sort-header role="button"
+                (click)="sorting('City')">
+                City
+              </th>
               <td mat-cell *matCellDef="let data"> {{data.City}} </td>
             </ng-container>
             <ng-container matColumnDef="country">
-              <th mat-header-cell *matHeaderCellDef class="table-heading"> Country </th>
+              <th mat-header-cell *matHeaderCellDef class="table-heading" mat-sort-header role="button"
+                (click)="sorting('Country')">
+                Country </th>
               <td mat-cell *matCellDef="let data"> {{data.Country}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -41,15 +49,14 @@
           <h1 class="filter-heading">Filter By Name and Country</h1>
           <h2 class="filter-col">First Name</h2>
           <div class="filter-data" *ngFor="let names of nameFilter">
-            <input type="checkbox" (click)="filterName($event,'First_name')" [checked]=names.filtered
-              value={{names.name}}>
+            <input type="checkbox" (click)="filterName($event)" [checked]=names.filtered value={{names.name}}>
             {{names.name}}
             <br>
           </div>
           <h2 class="filter-col">Country</h2>
           <div class="filter-data" *ngFor="let country of countryFilter">
-            <input type="checkbox" (click)="filterCountry($event,'Country')" [checked]=country.filtered
-              value={{country.name}}> {{country.name}} <br>
+            <input type="checkbox" (click)="filterCountry($event)" [checked]=country.filtered value={{country.name}}>
+            {{country.name}} <br>
           </div>
         </div>
       </div>
